--- a/src/input.css
+++ b/src/input.css
@@ -64,7 +64,7 @@ input:focus {
 
 .movie .affiche img{
     border-radius: 20px;
-    height: 90%;
+    height: 100%;
 }
 
 .movie .acteur img {
@@ -73,4 +73,13 @@ input:focus {
 
 .movie .acteur::-webkit-scrollbar {
     display: none;
+}
+
+.on {
+  background-color: #AE0000;
+  color: #0D1013;
+}
+
+.off {
+  border: none;
 }
