--- a/src/input.css
+++ b/src/input.css
@@ -74,3 +74,11 @@ input:focus {
 .movie .acteur::-webkit-scrollbar {
     display: none;
 }
+
+@media only screen and (max-width: 1000px) {
+  
+  .movie h4 a {
+    display: none;
+  }
+  
+}
