--- a/src/input.css
+++ b/src/input.css
@@ -22,12 +22,30 @@ input:focus {
     text-align: center;
 }
 
-.films div div {
+.films .gradient{
     width: 100%;
     height: 100%;
     background: linear-gradient(transparent, #000);
     position: absolute;
     z-index: 5;
+}
+
+.gradient{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(transparent, #000);
+    position: absolute;
+    z-index: 5;
+}
+
+.profil div div div{
+  width: 100%;
+  height: 70%;
+  background: linear-gradient(transparent, #000);
+  position: absolute;
+  z-index: 5;
+  border-radius: 0 0 20px 20px;
+  bottom: 0;
 }
 
 .films p{
@@ -43,10 +61,11 @@ input:focus {
 .films img {
   display: flex;
   z-index: -10;
-  /* height: 100%; */
+  height: 100%;
   width: 100%;
   border-radius: 10px;
 }
+
 
 #album_list input{
     background-color: transparent;
