--- a/src/input.css
+++ b/src/input.css
@@ -39,12 +39,10 @@ input:focus {
 }
 
 .profil div div div{
-  width: 100%;
-  height: 70%;
   background: linear-gradient(transparent, #000);
   position: absolute;
   z-index: 5;
-  border-radius: 0 0 20px 20px;
+  border-radius: 0 0 0.5rem 0.5rem;
   bottom: 0;
 }
 
