--- a/src/input.css
+++ b/src/input.css
@@ -9,7 +9,7 @@ input:focus {
 .films {
     width: 100%;
 }
-
+/* 
 .films div {
     width: 100%;
     height: 100%;
@@ -20,15 +20,7 @@ input:focus {
     border-radius: 20px;
     flex-direction: column;
     text-align: center;
-}
-
-.films .gradient{
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(transparent, #000);
-    position: absolute;
-    z-index: 5;
-}
+} */
 
 .gradient{
     width: 100%;
@@ -36,16 +28,9 @@ input:focus {
     background: linear-gradient(transparent, #000);
     position: absolute;
     z-index: 5;
+    border-radius: 0 0 8px 8px;
 }
-
-.profil div div div{
-  background: linear-gradient(transparent, #000);
-  position: absolute;
-  z-index: 5;
-  border-radius: 0 0 0.5rem 0.5rem;
-  bottom: 0;
-}
-
+/* 
 .films p{
     position: absolute;
     color: white;
@@ -62,7 +47,7 @@ input:focus {
   height: 100%;
   width: 100%;
   border-radius: 10px;
-}
+} */
 
 
 #album_list input{
